<resources>
    <string name="app_name">ZoVee</string>
    <string name="name">Name</string>
    <string name="mobileNum">Mobile Number</string>
    <string name="companyName">Company Name</string>
    <string name="email">Email</string>
    <string name="get_started">Get Started</string>
    <string name="please_wait">Please wait…</string>
    <string name="name_empty">Please enter name.</string>
    <string name="mobile_empty">Please enter mobile number.</string>
    <string name="companyName_empty">Please enter company name.</string>
    <string name="email_empty">Please enter email.</string>
    <string name="invalid_email">Please enter valid email address.</string>
    <string name="error">Something went wrong, please try again.</string>
    <string name="no_internet">No internet connection, please connect to internet first.</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="show_more">Show All</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="server_error">Something went wrong, please try again later.</string>
    <string name="progress_msg">Looking this up for you. We\'ll get you started in a bit!</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname_empty">Please enter last name.</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="dev_desk">Developer\'s Desk</string>
    <string name="about_us">About Us</string>
    <string name="write_que">How can we help you?</string>
    <string name="enter_rec_mail">Enter receiver email.</string>
    <string name="enter_que">Enter query.</string>
    <string name="can_not_saved">Sorry can no saved</string>
    <string name="file_saved">PDF Saved successfully to %1$s.</string>
    <string name="submit">Submit</string>
    <string name="subject_question">New query from %1$s</string>
    <string name="subject_feedback">Feedback from %1$s</string>
    <string name="question_submit_success">Query sent successfully.</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="welcome_msg">Welcome, %1$s</string>
    <string name="send">Send</string>
    <string name="feedback_hint">How can we improve?</string>
    <string name="enter_feedback">Enter your feedback.</string>
    <string name="feedback_success">Feedback sent successfully.</string>
    <string name="developer_desk_content">Infobyd holds wide experience in Information and Communication Technology. We enable our clients to use Customer Relationship Management (CRM) model for managing their company\'s interaction with current and future customers. It involves using technology to organize, automate, and synchronize sales, marketing, customer service and technical support.\n\nInfobyd is an authorized Zoho Alliance Partner. We specialise in :\n\n\u2022 Zoho Customization\n\u2022 Zoho Integration\n\u2022 Zoho API\n\u2022 Admin Supports\n\nFor more details, please visit our website <u>www.infobyd.com</u> or you can drop us an email at <u>Team@infobyd.com</u>.\n\nWe will be happy to hear from you!!</string>
    <string name="about_msg">ZoVee and the ZoVee logo are trademarks of Infobyd. Inc..</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Passowrd ?</string>
    <string name="new_user">New to ZoVee singup here.</string>
    <string name="password_empty">Please enter password.</string>
    <string name="setting">Setting</string>
    <string name="select_image">Please pick a profile image.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_pass">Please enter your old password.</string>
    <string name="enter_new_pass">Please enter new password.</string>
    <string name="enter_confirm_new_pass">Please enter confirm new password</string>
    <string name="password_not_match">Password is not matching.</string>
    <string name="skip">Skip</string>
    <string name="signup_msg">To access this feature, you need to signup.</string>
    <string name="logout_msg">Are you sure want to logout from ZoVee?</string>
    <string name="signup">Sign Up</string>

    <string name="facebook_app_id">123121555031740</string>
    <string name="fb_login_protocol_scheme">fb123121555031740</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="google">Sign in with Google</string>
    <string name="signin">Sign in</string>
    <string name="learn_zovee">Learn Zoho by Videos</string>
    <string name="logout">Logout</string>
    <string name="my_acnt">My Account</string>
    <string name="filter">Filter</string>
    <string name="selecr_filter_msg">Please select at least one category.</string>
    <string name="notifications">Notifications</string>
</resources>
