<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zoho.app.custom.RobotoLightEditText
        android:id="@+id/et_email"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <com.zoho.app.custom.RobotoLightEditText
        android:id="@+id/et_pass"
        style="@style/EditTextStyle"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <RelativeLayout
        android:id="@+id/btn_login"
        android:layout_below="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:padding="@dimen/_10sdp">

        <com.zoho.app.custom.RobotoRegularTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <ProgressBar
            android:id="@+id/loading"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:padding="10dp"
            android:theme="@style/AppTheme.WhiteAccent"
            android:visibility="invisible" />
    </RelativeLayout>

    <com.zoho.app.custom.RobotoMediumTextView
        android:id="@+id/textView_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="onForgot"
        android:layout_below="@+id/btn_login"
        android:text="@string/forgot_pass"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sdp" />
    <RelativeLayout
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/textView_forgot_pass"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/button_bg">

        <com.zoho.app.custom.RobotoMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/facebbok"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn_facebook"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/button_bg">

        <com.zoho.app.custom.RobotoMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/google"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </RelativeLayout>

    <com.zoho.app.custom.RobotoMediumTextView
        android:id="@+id/textView_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:onClick="onNewUser"
        android:visibility="gone"
        android:text="@string/new_user"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_14sdp" />
    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <com.zoho.app.custom.RobotoRegularTextView
            android:id="@+id/textView_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onSkip"
            android:padding="@dimen/_10sdp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <com.zoho.app.custom.RobotoRegularTextView
            android:id="@+id/textView_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onNewUser"
            android:padding="@dimen/_10sdp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
</RelativeLayout>