<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <com.zoho.app.custom.RobotoLightEditText
        android:id="@+id/et_pass_old"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/light_gray" />
    <com.zoho.app.custom.RobotoLightEditText
        android:id="@+id/et_pass_new"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/light_gray" />
    <com.zoho.app.custom.RobotoLightEditText
        android:id="@+id/et_pass_confirm"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirm_new"
        android:inputType="textPassword"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@color/light_gray" />

    <com.zoho.app.custom.RobotoMediumButton
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/button_bg"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp" />
</LinearLayout>