<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zoho.app.custom.CovesRegularTextView
        android:id="@+id/textView_labellogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_50sdp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@+id/textView_labellogo"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@drawable/play_white" />

    <com.zoho.app.custom.RobotoRegularTextView
        android:layout_width="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/learn_zovee"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <com.zoho.app.custom.RobotoRegularTextView
            android:id="@+id/textView_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <com.zoho.app.custom.RobotoRegularTextView
            android:id="@+id/textView_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

</RelativeLayout>